<resources>
    <string name="app_name">追书</string>
    <string name="app_dir_name">bookReader</string>
    <string name="update_time_string">更新时间：</string>
    <string name="update_chapter_string">最新章节：</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_success">下载成功</string>
    <string name="search_title">搜索</string>
    <string name="search_hint">搜索小说</string>
    <string name="action_about">关于</string>

    <!-- main tab title -->
    <string name="tab_book_shelf">我的书架</string>
    <string name="tab_book_store">发现</string>

    <!-- Chapter loading text -->
    <string name="loading">正在加载 &#8230;</string>
    <string name="load_fail_other">加载失败，请点我重试</string>
    <string name="load_fail_net_error">加载失败，请检查网络连接</string>

    <!-- page popupMenu -->
    <string name="content">目录</string>
    <string name="source_change">书源切换</string>
    <string name="progress">进度</string>
    <string name="font">字体</string>
    <string name="brightness">亮度</string>

    <!-- Action Mode Menu Items -->
    <string name="delete">删除</string>
    <string name="bookinfo_menu_add">加入书架</string>
    <string name="bookinfo_menu_added">已在书架</string>
    <string name="bookinfo_menu_read">开始阅读</string>
    <string name="bookinfo_menu_download">下载章节</string>
    <string name="contents">目录</string>
    <string name="separator">/</string>

    <string name="book_info">图书详情</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">设置</string>
    <string name="pref_general">常规</string>
    <string name="pref_offline">智能离线</string>
    <string name="pref_title_about">关于</string>
    <string name="pref_title_check_update">检查更新</string>
    <string name="pref_title_night_mode">夜间模式</string>
    <string name="pref_title_offline_wifi_only">使用移动网络时提醒</string>
    <string name="pref_title_offline_enable">离线模式</string>
    <string name="pref_summary_offline_enable">打开时，会自动缓存章节</string>
    <string name="action_refresh">刷新</string>
    <string name="action_stop_refresh">停止刷新</string>

    <string name="pref_title_data_sync">后台同步</string>
    <string name="pref_title_sync_notification">接收通知</string>
    <string name="pref_title_pre_load">预缓存</string>
    <string name="pref_title_sync_enable">后台同步</string>
    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 分钟</item>
        <item>30 分钟</item>
        <item>1 小时</item>
        <item>3 小时</item>
        <item>6 小时</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>
    <string name="pref_key_disclaimer">免责声明</string>
    <string name="pref_message_disclaimer">
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;追书阅读器提醒您：在使用追书阅读器前，请您务必仔细阅读并透彻理解本声明。您可以选择不使用追书阅读器，但如果您使用追书阅读器，您的使用行为将被视为对本声明全部内容的认可。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;追书阅读器是一款提供网络小说即时更新的工具，为广大小说爱好者提供一种方便、快捷、舒适的试读体验。追书阅读器致力于最大程度的减少网络小说阅读者在自行搜寻过程中亳无意义的时间浪费，通过专业搜索展示不同网站中网络小说的最新章节。追书阅读器为广大小说爱好者提供方便、快捷、舒适的试读体验的同时，也使优秀网络小说得以更迅捷、更广泛的传播，从而达到了在一定程度促进网络文学充分繁荣发展之目的。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当您点击搜索一本书时，追书阅读器会将该书的书名以关键词的形式提交到第三方网站或搜索引擎如（百度、宜搜、贴吧等）。第三方网站返回的内容与追书阅读器无关，追书阅读器对其概不负责，亦不承担任何法律责任。任何通过使用追书阅读器而链接到的第三方网页均系他人制作或提供，您可能从该第三方网页上获得其他服务，追书阅读器对其合法性概不负责，亦不承担任何法律责任。第三方搜索引擎结果根据你提交的书名自动搜索获得并提供试读，不代表追书阅读器赞成被搜索链接到的第三方网页上的内容或立场。您应该对使用搜索引擎的结果自行承担风险。追书阅读器不做任何形式的保证：不保证第三方搜索引擎的搜索结果满足您的要求，不保证搜索服务不中断，不保证搜索结果的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用追书阅读器，追书阅读器不承担任何法律责任。追书阅读器尊重并保护所有使用追书阅读器用户的个人隐私权。\n
&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;追书阅读器鼓励广大小说爱好者通过追书阅读器发现优秀网络小说及其提供商，并建议阅读正版图书。任何单位或个人认为通过追书阅读器搜索链接到的第三方网页内容可能涉嫌侵犯其信息网络传播权，应该及时向追书阅读器提出书面权利通知，并提供身份证明、权属证明及详细侵权情况证明。追书阅读器在收到上述法律文件后，将会依法尽快断开相关链接内容。
    </string>

    <string name="offline_offset">离线数量</string>
    <string name="pre_summary_offline_offset">离线当前章节的前后章节数量</string>
    <string name="classical_background">复古</string>
    <string name="normal_background">常规</string>
    <string name="eye_background">护眼</string>
    <string name="night_background">夜间</string>
    <string name="about_tips">这里什么都没有</string>
    <string name="toolbar_search_hint">搜索书名、作者</string>
    <string-array name="pref_offline_offset_entries">
        <item>3 章</item>
        <item>5 章</item>
        <item>7 章</item>
    </string-array>

    <string-array name="pref_offline_offset_values">
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>

    <string name="source_change_updated">最近更新：%1$s</string>
    <string name="source_change_host">来源：%1$s</string>
    <string name="book_info_content_title">目录</string>
    <string name="book_info_comment">书评</string>

    <string name="bookinfo_serial">连载</string>
    <string name="bookinfo_not_serial">完结</string>
    <string name="bookinfo_serial_count_divider">&#160;&#160;|&#160;&#160;</string>
    <string name="bookinfo_word_count">万字</string>
    <string name="update_cancel">暂不更新</string>
    <string name="update_download">立即更新</string>
    <string name="update_install">立即安装</string>
    <string name="update_ignore">忽略该版本</string>
    <string name="update_version_name_title">版本号：%1$s</string>
    <string name="update_size">大小：%1$.2fM</string>
    <string name="update_content_title">更新说明：</string>
    <string name="update_discover_new">发现新版本</string>
    <string name="update_notification_download_error">下载失败，请检查网络是否异常</string>
    <string name="update_notification_download_complete">下载完成，点击安装</string>
    <string name="update_notification_title">追书新版本</string>
    <string name="update_notification_text">正在下载</string>
    <string name="update_already_new">已是最新版本</string>
    <string name="page_touch_mode">翻页模式</string>
    <string name="bookshelf_edit_tips">本选中</string>

</resources>
